[package]
name = "notion-cli"
version = "0.1.0"
authors = [
    "Ansgar Dietrichs <ansgar.dietrichs@consensys.net>",
    "Greg Trowbridge <gregory.trowbridge@consensys.net>",
    "Sam Wilson <sam.wilson@consensys.net>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
