[package]
name = "notion-server"
version = "0.1.0"
authors = [
    "Ansgar Dietrichs <ansgar.dietrichs@consensys.net>",
    "Greg Trowbridge <gregory.trowbridge@consensys.net>",
    "Sam Wilson <sam.wilson@consensys.net>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
snafu = "0.6.0"
structopt = "0.3.4"
tokio = { version = "0.2.0", features = ["sync", "io-util", "rt-core", "blocking", "macros"] }
rocket = "0.4.2"
rocket_contrib = "0.4.2"
futures-util = "0.3.1"
ewasm = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
eth2_ssz = "0.1.2"
eth2_ssz_derive = "0.1.0"
slog = "2.5.2"
tree_hash = "0.1.0"
tree_hash_derive = "0.1.0"
fixed-hash = "0.5.2"
ring = "0.14.6"

[dev-dependencies]
hex = "0.4.0"
