[package]
name = "simulation-client"
version = "0.1.0"
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.0"
simulation_args = { path = "../eth2/simulation_args" }
snafu = "0.6.0"
structopt = "0.3.4"
