[package]
name = "simulation-server"
version = "0.1.0"
authors = [
    "Ansgar Dietrichs <ansgar.dietrichs@consensys.net>",
    "Greg Trowbridge <gregory.trowbridge@consensys.net>",
    "Sam Wilson <sam.wilson@consensys.net>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
ewasm = "0.2.2"
futures-util = "0.3.1"
# Rocket depends on an older version of `cookie`, which depends on an older
# version of `ring`, which conflicts with the newer version required in other packages
# Disabling cookie support with `default-features=false` avoids this issue.
rocket = { version= "0.4.2", default-features=false }
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
simulation = { path = "../eth2/simulation" }
simulation_args = { path = "../eth2/simulation_args" }
snafu = "0.6.0"
structopt = "0.3.4"
tokio = { version = "0.2.0", features = ["sync", "io-util", "rt-core", "blocking", "macros"] }
types = { path = "../eth2/types" }

[dev-dependencies]
hex = "0.4.0"
