[package]
name = "simulation_client_example"
version = "0.1.0"
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
# If desired, these packages can also be pushed to crates.io so anyone can write binaries that can send
# requests to a running simulation_server instance, all they'd need is to require the pushed package. eg:
# simulation_args = "0.1.0"
# simulation_client = "0.1.0"
simulation_args = { path = "../eth2/simulation_args" }
simulation_client = { path = "../simulation_client" }
structopt = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"