[package]
name = "simulation_args"
version = "0.1.0"
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6.0"
quilt_sim_proof_of_concept_ssz_types = { path = "../utils/ssz_types" }
types = { path = "../types" }
