[package]
name = "int_to_bytes"
version = "0.1.0"
# Not really -- this package was copied from https://github.com/sigp/lighthouse (with some slight
# modifications and deletions, detailed at the top of the lib.rs file)
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"

[dev-dependencies]
yaml-rust = "0.4.3"
hex = "0.3"
