[package]
name = "serde_hex"
version = "0.1.0"
# Not really -- this package was copied from sigp/lighthouse (with some very slight
# modifications and deletions to make it compatible with the code in this repository),
# TODO: If there's a better way to give credit here, update this.
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.102"
hex = "0.3"
