[package]
name = "ssz_types"
version = "0.1.0"
# Not really -- this package was copied from sigp/lighthouse (with some very slight
# modifications and deletions to make it compatible with the code in this repository),
# TODO: If there's a better way to give credit here, update this.
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

[dependencies]
tree_hash = "0.1.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_hex = { path = "../serde_hex" }
eth2_ssz = "0.1.2"
typenum = "1.11.2"

[dev-dependencies]
serde_yaml = "0.8.11"
tree_hash_derive = "0.1"
