[package]
name = "quilt_sim_proof_of_concept_ssz_types"
version = "0.1.0"
# Not really -- this package was copied from https://github.com/sigp/lighthouse (with some slight
# modifications and deletions, detailed at the top of each .rs file)
# (sigp/lighthouse license: https://github.com/sigp/lighthouse/blob/master/LICENSE)
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

[dependencies]
eth2_ssz = "0.1.2"
serde = "1.0.102"
serde_derive = "1.0.102"
quilt_sim_proof_of_concept_serde_hex = { path = "../serde_hex" }
snafu = "0.6.0"
tree_hash = "0.1.0"
typenum = "1.11.2"

[dev-dependencies]
serde_yaml = "0.8.11"
tree_hash_derive = "0.1"
